--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^4.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
